# csc13010-exercise

./: .gitignore  CMakeLists.txt  CertificateGenerator.cpp  CertificateGenerator.hpp  ConfigManager.cpp  ConfigManager.hpp  LICENSE  Logger.cpp  Logger.hpp  README.md  RecordIO.cpp  RecordIO.hpp  StatusRulesManager.cpp  StatusRulesManager.hpp  Student.hpp  UnitTest.hpp  config.json  faculties.json  main.cpp  programs.json  status_rules.json  statuses.json  students.json  users.csv  users.json  version_info.json
docs/refactoring/: refactor_report.md
outputs/: certificate.docx  certificate.md
